Java 25 - Update version